--- a/src/app/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/sign-up/sign-up.component.html
@@ -1,10 +1,17 @@
 <div class="w-[350px] px-5">
-  <h1 class="text-2xl font-bold text-center my-4 text-primary-500">Sign In</h1>
+  <h1 class="text-2xl font-bold text-center my-4 text-primary-500">Sign Up</h1>
   <form
     (ngSubmit)="submitForm()"
     class="py-3 flex items-start justify-start flex-col gap-4 border-black"
     [formGroup]="formData"
   >
+    <div class="flex flex-col items-start justify-start w-full">
+      <div class="flex flex-col gap-2 items-start justify-start w-full">
+        <label for="name">Name</label>
+        <input class="w-full" type="text" pInputText formControlName="name" />
+      </div>
+      <p *ngIf="nameError()" class="text-red-400">{{ nameError() }}</p>
+    </div>
     <div class="flex flex-col items-start justify-start w-full">
       <div class="flex flex-col gap-2 items-start justify-start w-full">
         <label for="email">Email</label>
@@ -38,14 +45,13 @@
         <p *ngIf="passwordError()" class="text-red-400">{{ passwordError() }}</p>
       </div>
     </div>
-
     <div class="w-full">
       <p-button type="submit" [disabled]="!isValidForm()" styleClass="!w-full" label="Submit" />
     </div>
     <div class="text-sm text-center flex items-center justify-center w-full">
       <p class="text-purple-300">
-        Dont have an account ?
-        <a routerLink="/auth/sign-up" class="text-blue-500 cursor-pointer">Sign up</a>
+        Already have an account ?
+        <a routerLink="/auth/sign-in" class="text-blue-500 cursor-pointer">Sign in</a>
       </p>
     </div>
   </form>
